1. There is a screen width where the metric and state menus do not display and neither does the arrow (maybe there is a screensize that isn’t covered when switching side menu?)  style-responsive.css min-width:831px; 2. When the screen is narrow,(tablet size?) the buckets are squished (they look ok on the original site though) and the logos overlap. .logo-wrap 23% main.css fixed those and bucket section from 70% to 92%

--- a/MHTCDashboard/src/main/webapp/css/mesh/main.css
+++ b/MHTCDashboard/src/main/webapp/css/mesh/main.css
@@ -91,7 +91,7 @@ a:hover{
 /* ========================= CONTAINER ==================== */
 /******cxf changed*****/
 .container{
-	width: 70%;
+	width: 92%;
 	margin: 0 auto;
 	position: relative;
 	padding: 0 0px;
@@ -332,7 +332,7 @@ ___________________________________
 
 .logo-wrap{
 	display: inline-block;
-	width: 19%;	
+	width: 23%;	
 }
 
 .logo-contain{
